frontend/src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);

  --color-peach: #FF8661;
  --color-teal: #006D77;
  --color-sunshine: #FFD166;
  --color-sky: #55CCF2;
  --color-violet: #9B5DE5;
  --color-ink: #1E1E1E;
  --color-paper: #FAFAFA;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
    
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

